--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <title>BssinessName</title>
 </head>
 
-<body onscroll="headerBackgroundAnimation();">
+<body>
     <!-- HEADER START -->
     <header id="page-top" class="header fixed-top">
         <!-- navigation start -->
@@ -994,8 +994,8 @@
                                             <input id="sub-mail-input" type="email" class="form-control"
                                                 placeholder="Email Address" aria-label="Recipient's username"
                                                 aria-describedby="button-addon2">
-                                            <button class="btn btn-outline-secondary" type="button" id="button-addon2"
-                                                onclick="validatesSubscribeForm()">Submit</button>
+                                            <button class="btn btn-outline-secondary" type="button"
+                                                id="button-addon2">Submit</button>
                                         </div>
                                         <p id="mail-error"></p>
                                     </div>
