--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                     </a>
                                     <div class="view-opt-text text-center">
                                         <a class="d-block mb-2 text-white" href="#">Labore et dolore magnam</a>
-                                        <p class="m-0">Wordpress</p>
+                                        <p class="m-0">Logo Design</p>
                                     </div>
                                 </div>
                             </figure>
@@ -463,7 +463,7 @@
                                     </a>
                                     <div class="view-opt-text text-center">
                                         <a class="d-block mb-2 text-white" href="#">Labore et dolore magnam</a>
-                                        <p class="m-0">Wordpress</p>
+                                        <p class="m-0">E-commerce</p>
                                     </div>
                                 </div>
                             </figure>
@@ -482,7 +482,7 @@
                                     </a>
                                     <div class="view-opt-text text-center">
                                         <a class="d-block mb-2 text-white" href="#">Labore et dolore magnam</a>
-                                        <p class="m-0">Wordpress</p>
+                                        <p class="m-0">E-commerce</p>
                                     </div>
                                 </div>
                             </figure>
@@ -518,7 +518,7 @@
                                     </a>
                                     <div class="view-opt-text text-center">
                                         <a class="d-block mb-2 text-white" href="#">Labore et dolore magnam</a>
-                                        <p class="m-0">Wordpress</p>
+                                        <p class="m-0">Web</p>
                                     </div>
                                 </div>
                             </figure>
@@ -536,7 +536,7 @@
                                     </a>
                                     <div class="view-opt-text text-center">
                                         <a class="d-block mb-2 text-white" href="#">Labore et dolore magnam</a>
-                                        <p class="m-0">Wordpress</p>
+                                        <p class="m-0">Web</p>
                                     </div>
                                 </div>
                             </figure>
@@ -554,7 +554,7 @@
                                     </a>
                                     <div class="view-opt-text text-center">
                                         <a class="d-block mb-2 text-white" href="#">Labore et dolore magnam</a>
-                                        <p class="m-0">Wordpress</p>
+                                        <p class="m-0">Logo Design</p>
                                     </div>
                                 </div>
                             </figure>
