--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     <!-- main grid start -->
                     <div class="row gx-2 gx-lg-0 ">
                         <!-- portfolio item start -->
-                        <div class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="logo-desig-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-01.jpg" alt="bird" />
@@ -433,7 +433,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="wordpress-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-02.jpg" alt="bird" />
@@ -451,7 +451,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="e-commerce-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-03.jpg" alt="bird" />
@@ -469,7 +469,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="e-commerce-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-04.jpg" alt="bird" />
@@ -488,7 +488,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="wordpress-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-05.jpg" alt="bird" />
@@ -506,7 +506,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="web-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-06.jpg" alt="bird" />
@@ -524,7 +524,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="web-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-07.jpg" alt="bird" />
@@ -542,7 +542,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="logo-desig-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-08.jpg" alt="bird" />
