--- a/index.html
+++ b/index.html
@@ -393,19 +393,20 @@
                 <nav class="portfolio__nav text-center">
                     <ul class="d-flex flex-column justify-content-center align-items-center flex-sm-row">
                         <li class="portfolio__nav-item">
-                            <a class="active" href="#">all</a>
+                            <a href="#" id="all-btn" class="active">All</a>
+                        </li>
+                        <li class=" portfolio__nav-item">
+                            <a href="#" id="web-btn">Web</a>
                         </li>
                         <li class="portfolio__nav-item">
-                            <a href="#">web</a>
+                            <a href="#" id="logo-btn">logo design</a>
                         </li>
                         <li class="portfolio__nav-item">
-                            <a href="#">logo design</a>
+                            <a href="#" id="wp-btn">Wordpress</a>
+
                         </li>
-                        <li class="portfolio__nav-item">
-                            <a href="#">WordPress</a>
-                        </li>
-                        <li class="portfolio__nav-item">
-                            <a href="#">E-commerce</a>
+                        <li class="portfolio__nav-item" onclick="displaysAllPortfolioItems();">
+                            <a href="#" id="ecom-btn">E-commerce</a>
                         </li>
                     </ul>
                 </nav> <!-- portfolio nav end -->
@@ -415,7 +416,7 @@
                     <!-- main grid start -->
                     <div class="row gx-2 gx-lg-0 ">
                         <!-- portfolio item start -->
-                        <div id="logo-desig-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="logo-design-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-01.jpg" alt="bird" />
@@ -542,7 +543,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div id="logo-desig-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="logo-design-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-08.jpg" alt="bird" />
