--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <!-- wrapper start -->
                 <div class="portfolio__item-wrapper">
                     <!-- main grid start -->
-                    <div class="row gx-2 gx-lg-0 ">
+                    <div class="row gx-2 gx-lg-0 " id="portfolio-wrapper">
                         <!-- portfolio item start -->
                         <div id="logo-design-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
