--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                             <a href="#" id="wp-btn">Wordpress</a>
 
                         </li>
-                        <li class="portfolio__nav-item" onclick="displaysAllPortfolioItems();">
+                        <li class="portfolio__nav-item">
                             <a href="#" id="ecom-btn">E-commerce</a>
                         </li>
                     </ul>
