--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     <!-- main grid start -->
                     <div class="row gx-2 gx-lg-0 " id="portfolio-wrapper">
                         <!-- portfolio item start -->
-                        <div id="logo-design-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="logo-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-01.jpg" alt="bird" />
@@ -434,7 +434,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div id="wordpress-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="wp-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-02.jpg" alt="bird" />
@@ -452,7 +452,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div id="e-commerce-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="ecom-item-1" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-03.jpg" alt="bird" />
@@ -470,7 +470,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div id="e-commerce-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="ecom-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-04.jpg" alt="bird" />
@@ -489,7 +489,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div id="wordpress-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="wp-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-05.jpg" alt="bird" />
@@ -543,7 +543,7 @@
                             </figure>
                         </div> <!-- portfolio item end -->
                         <!-- portfolio item start -->
-                        <div id="logo-design-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
+                        <div id="logo-item-2" class="col-12 port-item-mb-mob col-sm-6 col-lg-3">
                             <figure class="portfolio__item h-100 m-0 ratio ratio-3by4">
                                 <a href="#" class="d-block">
                                     <img class="h-100" src="./images/gallery/gallery-08.jpg" alt="bird" />
