--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                                     Vestibulum quis hendrerit enim. Aenean viverra aliquam ex, sed ornare risus porta
                                     in.
                                 </p>
-                                <a class="btn" href="#">read more</a>
+                                <a class="btn" href="#portfoilio">read more</a>
                             </div>
                         </article>
                     </div> <!-- item end -->
