--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
                             <span class="fab fa-facebook-f"></span>
                         </a>
 
-                        <a href="https://www.linkedin.com/in/predrag-nastic" class="social-link d-block">
+                        <a href="https://www.linkedin.com/in/predrag-nastic" target="_blank" class="social-link d-block">
                             <span class="fab fa-linkedin-in"></span>
                         </a>
                     </nav>
