--- a/index.html
+++ b/index.html
@@ -332,14 +332,14 @@
                 <!-- main grid start -->
                 <div class="row p-0 gx-0">
                     <!-- item start -->
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6" id="about-img">
                         <figure class="h-100 ratio ratio-3by4 m-0">
                             <img src="./images/about.jpg" alt="hiker" />
                         </figure>
                     </div> <!-- item end -->
 
                     <!-- item start -->
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6" id="about-txt">
                         <article class="about__wrapper h-100">
                             <div class="about__content px-3 px-lg-5 ps-xl-4 text-center text-md-start">
 
